welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur());
	T(0) = getCouleurSol();
	for(w<- 1 to T.length-1) {
		T(w) = getCouleurSol();
		avance();
	}
	for(x<-1 to T.length-1) {
		recule();
	}
	def Beta() {
		gauche();
		avance();
		droite();
		val decalage = litMessage().toInt
		for ( w<- 0 to T.length - 1 ) {
			var c:Color = T( ( x + decalage ) % T.Length );
			setCouleurBrosse(c);
			baisseBrosse();
			leveBrosse();
			avance();
								}
	
			}
	Beta();

}
